# worktime

./: Cargo.toml  LICENSE.txt  Readme.md  \home\rainer\worktime.csv  worktime.csv
src/: cli.rs  config.rs  database.rs  idle_detection.rs  main.rs  models.rs  monitoring.rs  utils.rs
