[package]
name = "worktime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = "0.5" # system libs required: libXi-devel libX11-devel libXtst-devel
chrono = {version = "0.4", features = ["serde"]}
csv = "1.1"
serde = { version = "1", features = ["derive"] }
