[package]
name = "worktime"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = "0.5" # system libs required: libXi-devel libX11-devel libXtst-devel
chrono = {version = "0.4", features = ["serde"]}
csv = "1.1"
serde = { version = "1", features = ["derive"] }
signal-hook = { version = "0.3"}
expanduser = { version = "1.2"}
confy = "0.5"
named-lock = "0.3"
clap = { version = "4.3.19", features = ["derive"] }

[dev-dependencies]
cargo-tarpaulin = "0.18.0"

